Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17230

encryption_key_id from alter is ignored by encryption threads

    XMLWordPrintable

Details

    Description

      Although it is possible to specify encryption key id in alter statement for not encrypted tables (innodb_encrypt_tables = off): ALTER TABLE t1 ENCRYPTION_KEY_ID=X. The encryption threads when encrypting such table (innodb_encrypt_tables = on) will use key id 0 instead of X specified.

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              robgolebiowski Robert Golebiowski
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 7h
                  7h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.